Refactor TypeScript configuration and enhance speech recognition handling
- Updated tsconfig files to adjust composite settings and include/exclude patterns for better project structure.
- Improved type definitions for speech recognition in MicrophoneTest component, enhancing type safety and clarity.
- Refactored AnnotationOverlay component to draw rounded rectangles using arcs for better visual presentation.

These changes streamline TypeScript setup and improve the robustness of speech recognition features.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,7 +11,7 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true, // important for Vite (keeps emit off)
+    "noEmit": true,
     "jsx": "react-jsx",
 
     /* Linting */
@@ -27,7 +27,7 @@
     },
 
     /* Required for project references */
-    "composite": true
+    "composite": false
   },
   "include": ["src"]
 }
