--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,7 +13,7 @@
     "noEmit": true,
 
     /* Required for references */
-    "composite": true,
+    "composite": false,
 
     /* Linting */
     "strict": true,
